syntax = "proto3";
option csharp_namespace = "Coupon.Grpc";

package Coupon;

service CouponProtoService {
	rpc GetCoupon (GetCouponRequest) returns (CouponModel);
   rpc GetCoupons (Empty) returns (GetCouponsResponse);
	rpc CreateCoupon (CreateCouponRequest) returns (CouponModel);
	rpc EditCoupon (EditCouponRequest) returns (CouponModel);

}
message GetCouponRequest {
	string couponCode = 1;
}
message GetCouponsResponse {
    repeated CouponModel coupons = 1;
}
message CouponModel {
	int32 id = 1;                 
    string couponId = 2;           
    string couponCode = 3;          
    double discountAmount = 4;     
    bool status = 5;               
    double minAmount = 6;           
    double maxAmount = 7;               
}

message CreateCouponRequest {
    string couponCode = 1;
    double discountAmount = 2;      
    bool status = 3;              
    double minAmount = 4;      
    double maxAmount = 5;            
}

message EditCouponRequest {
	int32 id = 1;                   
    string couponCode = 2;        
    double discountAmount = 3;     
    bool status = 4;                
    double minAmount = 5;           
    double maxAmount = 6; 
}
message Empty {}

